[workspace]
resolver = "2"
members = ["crates/*", "crates/aggregation/guest", "crates/ffi/guests"]

[workspace.package]
version = "2.2.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0-ethereum/"

[workspace.dependencies]
# Intra-workspace dependencies
risc0-aggregation = { version = "0.7.0", default-features = false, path = "crates/aggregation" }
risc0-build-ethereum = { version = "2.2.1", default-features = false, path = "build" }
risc0-ethereum-contracts = { version = "2.2.1", default-features = false, path = "contracts" }
risc0-op-steel = { version = "0.6.0", default-features = false, path = "crates/op-steel" }
risc0-steel = { version = "2.2.1", default-features = false, path = "crates/steel" }

# risc0 monorepo dependencies.
risc0-binfmt = { version = "2.0", default-features = false }
risc0-build = { version = "2.1", default-features = false }
risc0-zkp = { version = "2.0", default-features = false }
risc0-zkvm = { version = "2.1", default-features = false }

# Alloy guest dependencies
alloy-consensus = { version = "1.0" }
alloy-eips = { version = "1.0" }
alloy-evm = { version = "0.8" }
alloy-rlp = { version = "0.3.8" }
alloy-primitives = { version = "1.0" }
alloy-rpc-types = { version = "1.0" }
alloy-sol-types = { version = "1.0" }

# OP Steel
alloy-op-evm = { version = "0.8" }
op-alloy-network = { version = "0.16" }

# Alloy host dependencies
alloy = { version = "1.0" }
alloy-trie = { version = "0.8" }

# Beacon chain support
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "ade5ce6c4a19107c1059e5338d8f18855bd2d931" }

anyhow = { version = "1.0" }
arrayvec = "0.7"
bincode = { version = "1.3" }
bytemuck = "1.21"
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
criterion = "0.5"
enumn = "0.1"
hex = "0.4"
itertools = "0.14"
log = "0.4"
rand = "0.9"
reqwest = "0.12"
revm = { version = "23.1", default-features = false, features = ["std"] }
op-revm = { version = "4.0", default-features = false, features = ["std"] }
rkyv = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10" }
test-log = "0.2.15"
thiserror = { version = "2.0" }
tokio = { version = "1.35" }
tracing = "0.1"
url = { version = "2.5" }

[profile.bench]
codegen-units = 1
lto = "fat"
