[package]
name = "risc0-aggregation"
resolver = "2"
version = "0.1.0-alpha.1"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
guest-set-builder = { path = "./guest", optional = true }
hex = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["verify"]
verify = ["dep:guest-set-builder"]
