[package]
name = "risc0-ethereum-contracts"
description = "Ethereum contracts for RISC Zero applications"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
anyhow = "1.0"

[dependencies]
alloy = { workspace = true, features = ["sol-types", "contract"] }
anyhow = { workspace = true }
cfg-if = { workspace = true }
hex = { workspace = true, optional = true }
risc0-aggregation = { workspace = true }
risc0-zkvm = { workspace = true }
thiserror = { workspace = true, features = ["default"] }
tracing = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
regex = "1.10"
tokio = { workspace = true, features = ["macros", "rt"] }

[lib]
doctest = false

[features]
default = []
unstable = ["dep:hex", "risc0-aggregation/verify"]
