[package]
name = "risc0-ethereum-relay"
description = "A relayer to integrate Ethereum with Bonsai."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
backoff = { version = "0.4", features = ["tokio"] }
bincode = "1.3"
bonsai-sdk = { workspace = true, features = ["async"] }
clap = { version = "4.5", features = ["derive", "env"] }
displaydoc = "0.2"
ethers = { version = "2.0", features = ["rustls", "ws", "ethers-solc"] }
ethers-signers = { version = "2.0", features = ["aws"] }
futures = "0.3"
hex = "0.4"
pin-project = "1"
reqwest = { version = "0.11", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
  "stream",
] }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full", "sync"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "4.1", features = ["axum_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum", "debug-embed"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
validator = { version = "0.17", features = ["derive"] }

[dev-dependencies]
bytemuck = "1.14"
risc0-ethereum-relay-test-methods = { path = "./tests/methods" }
rstest = "0.18"
serial_test = "2.0"
time = "0.3"
wiremock = "0.6"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
