[package]
name = "risc0-aggregation"
description = "Proof aggregation for RISC Zero"
resolver = "2"
version = "0.7.0"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
bytemuck = { workspace = true }
# TODO(#353) Determine if it is possible to publish risc0-aggregation with set builder image ID and ELF
#guest-set-builder = { version = "0.1.0", path = "./guest", optional = true }
hex = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["verify"]
verify = []
