[package]
name = "risc0-steel"
description = "Query Ethereum state, or any other EVM-based blockchain state within the RISC Zero zkVM."
version = { workspace = true }
rust-version = "1.80"
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy = { workspace = true, optional = true, features = ["full"] }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-trie = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
bincode = { workspace = true }
enumn = { workspace = true }
ethereum-consensus = { workspace = true, optional = true }
log = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
revm = { workspace = true, features = ["optional_balance_check", "optional_block_gas_limit", "optional_eip3607", "optional_no_base_fee", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true, features = ["default"] }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["contract", "node-bindings"] }
risc0-steel = { path = ".", features = ["host"] }
serde_json = { workspace = true }
test-log = { workspace = true }

[features]
default = []
host = [
    "dep:alloy",
    "dep:ethereum-consensus",
    "dep:log",
    "dep:reqwest",
    "dep:serde_json",
    "dep:tokio",
    "dep:url",
    "serde_json/raw_value"
]
kzg = ["revm/c-kzg"]
rpc-tests = []
