[package]
name = "risc0-ethereum-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, default-features = false, features = ["unstable", "client"] }
tokio = { workspace = true, features = ["rt"] }
bytemuck = { workspace = true }
risc0-ethereum-test-utils-guests = { path = "./guests" }
hex = "0.4.3"
