[workspace]
resolver = "2"
members = ["host", "methods"]

[workspace.dependencies]
alloy-primitives = { version = "0.6.4", features = ["serde", "rlp", "std"] }
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-rlp-derive = { version = "0.3.4", default-features = false }
alloy-sol-types = { version = "0.6.4" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
ethers-core = "2.0"
ethers-providers = "2.0"
log = "0.4"
methods = { path = "methods" }
nybbles = { version = "0.2.1", features = ["serde"] }
once_cell = "1.19"
revm = { version = "7.2", default-features = false, features = ["std"] }
risc0-ethereum-view-call = { path = "../../view-call" }
risc0-zkvm = { version = "0.21.0", default-features = false }
rlp = "0.5.2"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.35" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
